add IsFavorite flag
