# MoviesApi.Swagger/moviesApi_swagger.yaml
@@ -79,6 +79,10 @@ paths:
           in: query
           required: true
           type: string
+        - name: userId
+          in: query
+          required: false
+          type: string
       responses:
         200:
           description: Returns a list of movies
@@ -121,6 +125,11 @@ paths:
       tags:
         - movies
       operationId: GetTopFavoriteMovies
+      parameters:
+        - name: userId
+          in: query
+          required: false
+          type: string
       responses:
         200:
           description: Return a list of top favorite movies
@@ -241,6 +250,8 @@ definitions:
          type: number
       vote_count:
          type: integer
+    required:
+      - id
 
   Genre:
     type: object
@@ -322,16 +333,17 @@ definitions:
         type: integer
       Description:
         type: string
-      FavoriteCount:
-        type: integer
       Title:
         type: string
       PosterPath:
         type: string
       ReleaseDate:
         type: string
+      IsFavorite:
+        type: boolean
     required:
       - MovieId
+      - IsFavorite
   FavoritesDto:
     type: object
     properties:
